# voting-dapp

./: .eslintrc.json  .gitignore  PROJECT_DESCRIPTION.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
anchor/: .gitignore  Anchor.toml
anchor/programs/votingdapp/: Cargo.toml
anchor/programs/votingdapp/src/: lib.rs
anchor/src/: votingdapp-exports.ts
anchor/tests/: votingdapp.spec.ts
scripts/: initialize-poll.cjs
src/app/: globals.css  layout.tsx
src/app/api/vote/: route.ts
src/app/api/vote/debug-poll/: route.ts
src/app/votingdapp/: page.tsx
src/components/account/: account-list-feature.tsx  account-ui.tsx
src/components/dashboard/: dashboard-feature.tsx
src/components/solana/: solana-provider.tsx
src/components/ui/: ui-layout.tsx
src/components/votingdapp/: votingdapp-data-access.tsx  votingdapp-feature.tsx  votingdapp-ui.tsx
src/scripts/: initialize-poll.ts
