[package]
name = "votingdapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "votingdapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-panic = []
custom-heap = []


[dependencies]
anchor-lang = "0.31.1"

[dependencies.proc-macro2]
version = "=1.0.97"

[lints.rust]
unexpected_cfgs = { level = "allow", priority = 2 }
