[package]
name = "votingdapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "votingdapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-panic = []
custom-heap = []


[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
bytemuck = { version = "1.0", features = ["derive"] }

[dependencies.proc-macro2]
version = "=1.0.95"

[lints.rust]
unexpected_cfgs = { level = "allow", priority = 2 }
